--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
     "url": "https://github.com/MyUserNameIsMyUserName/V__Arena/issues"
   },
   "homepage": "https://github.com/MyUserNameIsMyUserName/V__Arena#readme",
-  "dependencies": {}
+  "dependencies": {
+    "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "is-online": "^9.0.1",
+    "nodemon": "^2.0.12",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
+    "systeminformation": "^5.8.0",
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
