--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "V__Arena",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"scss_to_css": "node-sass -r app_src/style/ -o app_src/style/ --output-style compressed"
   },
   "repository": {
     "type": "git",
@@ -22,9 +23,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "is-online": "^9.0.1",
+    "jshint": "^2.13.1",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
+    "open": "^8.2.1",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
+    "style-loader": "^3.2.1",
     "systeminformation": "^5.8.0",
     "web-vitals": "^2.1.0",
     "webpack": "^5.50.0",
