--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
 		"activityBar.background": "#00325e",
 		"titleBar.activeBackground": "#002d8f",
 		"titleBar.activeForeground": "#ffffff"
-	}
+	},
+	"telemetry.enableCrashReporter": false,
+	"files.eol": "\n",
+	"files.insertFinalNewline": true
 }
