--- a/Var_@_v-0.1_72/package.json
+++ b/Var_@_v-0.1_72/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v__arena",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "systeminformation": "^5.8.0",
     "web-vitals": "^2.1.0",
     "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "dotenv": "^10.0.0"
   }
 }
