--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
-    "express": "^4.17.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "is-online": "^9.0.1",
     "jshint": "^2.13.1",
     "node-sass": "^6.0.1",
@@ -24,7 +25,6 @@
     "systeminformation": "^5.8.0",
     "web-vitals": "^2.1.0",
     "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2",
-    "dotenv": "^10.0.0"
+    "webpack-cli": "^4.7.2"
   }
 }
