--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "socket.io-client": "^4.1.3",
     "style-loader": "^3.2.1",
     "systeminformation": "^5.8.0",
+    "v_database": "^0.1.6",
+    "v_rifier": "^0.0.6",
     "web-vitals": "^2.1.0",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
